--- a/styles.css
+++ b/styles.css
@@ -35,5 +35,34 @@ img {
     width: 350px;
     overflow: hidden;
     margin-bottom: 5px;
+    float: left;
 }
 
+.profile-user-settings {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: stretch;
+    float: left;
+    margin-top: 50px;
+    margin-right: 50px;
+
+}
+
+.profile-stats {
+    
+}
+
+/* Grid gallery*/
+
+.gallery {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 3rem;
+    margin-top: 20px;
+
+}
+
+.gallery-item {
+    position: relative;
+}
